# data-collector

./: .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: docs.yml  publish-pypi.yml  test.yml
code/: app.py  server.py
code/browser/: init_browser.py
code/cdr/: download_dates.py  download_file.py  last_updated.py  utils.py
code/mdrm_dict/: mdrm_processes.py
code/xbrl/: process_file.py
docs/: Makefile  api_reference.md  changelog.md  conf.py  development.md  examples.md  getting_started.md  index.rst  requirements.txt  responsible_usage.md
docs/_templates/: .gitkeep
examples/: ffiec_data_collection_demo.ipynb
ffiec_data_collector/: __init__.py  downloader.py  thumbprint.py
tests/: __init__.py  test_downloader.py  test_integration.py  test_thumbprint.py
